--- a/src/components/homePage.css
+++ b/src/components/homePage.css
@@ -30,7 +30,7 @@
     border: none;
     padding: 1rem;
     font-size: 1rem;
-    background-color: #ff7e67;
+    background-color: #283e51;
     border-radius: 0 5px 5px 0;
   }
   
@@ -39,7 +39,7 @@
     border: none;
     padding: 1rem;
     font-size: 1rem;
-    background-color: #ffd700;
+    background-color: #283e51;
   }
   
   .favorites-title {
