--- a/src/components/homePage.css
+++ b/src/components/homePage.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     align-items: center;
     padding: 2rem;
-    background: linear-gradient(to bottom, #4b79a1, #283e51);
+    background: linear-gradient(to bottom, #002342, #283e51);
     color: #fff;
+    width: 100%;
   }
   
   .homepage-title {
@@ -30,7 +31,7 @@
     border: none;
     padding: 1rem;
     font-size: 1rem;
-    background-color: #283e51;
+    background-color: #5a6f7d;
     border-radius: 0 5px 5px 0;
   }
   
@@ -39,7 +40,7 @@
     border: none;
     padding: 1rem;
     font-size: 1rem;
-    background-color: #283e51;
+    background-color: #5a6f7d;
   }
   
   .favorites-title {
@@ -49,7 +50,7 @@
   
   .favorites-list {
     width: 100%;
-    max-width: 600px;
+    padding: 0;
   }
   
   .favorite-item {
@@ -60,8 +61,8 @@
     background-color: #5a6f7d;
     color: #fff;
     border: none;
-    margin-bottom: 1rem;
-    border-radius: 5px;
+    margin: 0;
+    border-radius: 0;
   }
   
   .favorite-item:hover {
