--- a/src/components/weatherPage.css
+++ b/src/components/weatherPage.css
@@ -30,3 +30,22 @@
     width: 100%;
   }
   
+  .top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 1rem;
+    width: 100%;
+  }
+  
+  .search-form {
+    display: flex;
+    align-items: flex-start;
+    flex-grow: 1;
+  }
+
+  .search-form .input-group {
+    display: flex;
+    width: 100%;
+  }
+  
